--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -19,6 +20,21 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@taiga-ui/addon-charts": "^3.25.0",
+    "@taiga-ui/addon-commerce": "^3.25.0",
+    "@taiga-ui/addon-doc": "^3.25.0",
+    "@taiga-ui/addon-editor": "^3.25.0",
+    "@taiga-ui/addon-mobile": "^3.25.0",
+    "@taiga-ui/addon-preview": "^3.25.0",
+    "@taiga-ui/addon-table": "^3.25.0",
+    "@taiga-ui/addon-tablebars": "^3.25.0",
+    "@taiga-ui/cdk": "^3.25.0",
+    "@taiga-ui/core": "^3.25.0",
+    "@taiga-ui/icons": "^3.25.0",
+    "@taiga-ui/kit": "^3.25.0",
+    "@taiga-ui/styles": "^3.25.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "dompurify": "2.2.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -34,6 +50,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@tinkoff/eslint-config": "^1.52.1",
     "@tinkoff/eslint-config-angular": "^1.53.2",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
