--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^16.0.0",
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular-eslint/builder": "15.2.1",
     "@angular-eslint/eslint-plugin": "15.2.1",
@@ -52,15 +53,12 @@
     "@tinkoff/eslint-config-angular": "^1.53.2",
     "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "^8.33.0",
     "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "jest": "^29.5.0",
     "typescript": "~4.9.4"
   }
 }
