--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@taiga-ui/addon-charts": "^3.25.0",
-    "@taiga-ui/addon-commerce": "^3.25.0",
-    "@taiga-ui/addon-doc": "^3.25.0",
-    "@taiga-ui/addon-editor": "^3.25.0",
-    "@taiga-ui/addon-mobile": "^3.25.0",
-    "@taiga-ui/addon-preview": "^3.25.0",
-    "@taiga-ui/addon-table": "^3.25.0",
-    "@taiga-ui/addon-tablebars": "^3.25.0",
-    "@taiga-ui/cdk": "^3.25.0",
-    "@taiga-ui/core": "^3.25.0",
-    "@taiga-ui/icons": "^3.25.0",
-    "@taiga-ui/kit": "^3.25.0",
-    "@taiga-ui/styles": "^3.25.0",
+    "@taiga-ui/addon-charts": "3.31.1",
+    "@taiga-ui/addon-commerce": "3.31.1",
+    "@taiga-ui/addon-doc": "3.31.1",
+    "@taiga-ui/addon-editor": "3.31.1",
+    "@taiga-ui/addon-mobile": "3.31.1",
+    "@taiga-ui/addon-preview": "3.31.1",
+    "@taiga-ui/addon-table": "3.31.1",
+    "@taiga-ui/addon-tablebars": "3.31.1",
+    "@taiga-ui/cdk": "3.31.1",
+    "@taiga-ui/core": "3.31.1",
+    "@taiga-ui/icons": "3.31.1",
+    "@taiga-ui/kit": "3.31.1",
+    "@taiga-ui/styles": "3.31.1",
     "@tinkoff/ng-dompurify": "3.0.0",
     "dompurify": "2.2.9",
     "rxjs": "~7.8.0",
@@ -49,6 +49,10 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@ng-web-apis/universal": "^2.1.0",
     "@tinkoff/eslint-config": "^1.52.1",
     "@tinkoff/eslint-config-angular": "^1.53.2",
     "@types/dompurify": "2.2.3",
@@ -56,6 +60,7 @@
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.33.0",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
