--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --verbose",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "bundle-report": "ng build --configuration development --stats-json && webpack-bundle-analyzer dist/angular-course/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -52,6 +53,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@faker-js/faker": "^8.0.2",
     "@ng-web-apis/universal": "^2.1.0",
     "@tinkoff/eslint-config": "^1.52.1",
     "@tinkoff/eslint-config-angular": "^1.53.2",
@@ -64,6 +66,7 @@
     "eslint": "^8.33.0",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "webpack-bundle-analyzer": "^4.9.0"
   }
 }
