--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@taiga-ui/styles": "3.35.0",
     "@tinkoff/ng-dompurify": "3.0.0",
     "dompurify": "2.2.9",
+    "json-server": "^0.17.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
