--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-with-mock-server": "npm run start & node backend/api-run.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --verbose",
@@ -36,9 +37,9 @@
     "@taiga-ui/styles": "3.35.0",
     "@tinkoff/ng-dompurify": "3.0.0",
     "dompurify": "2.2.9",
-    "json-server": "^0.17.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -61,12 +62,14 @@
     "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.2",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "babel-jest": "^29.5.0",
     "eslint": "^8.33.0",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
+    "json-server": "^0.17.4",
     "typescript": "~4.9.4",
     "webpack-bundle-analyzer": "^4.9.0"
   }
