--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@taiga-ui/styles": "3.35.0",
     "@tinkoff/ng-dompurify": "3.0.0",
     "dompurify": "2.2.9",
+    "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
@@ -62,6 +63,7 @@
     "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.200",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
