--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^15.2.0",
     "@taiga-ui/addon-charts": "3.35.0",
     "@taiga-ui/addon-commerce": "3.35.0",
-    "@taiga-ui/addon-doc": "3.35.0",
+    "@taiga-ui/addon-doc": "^3.52.0",
     "@taiga-ui/addon-editor": "3.35.0",
     "@taiga-ui/addon-mobile": "3.35.0",
     "@taiga-ui/addon-preview": "3.35.0",
